--- a/Receta de Galletas de Chocolate.html
+++ b/Receta de Galletas de Chocolate.html
@@ -10,7 +10,7 @@
 <img class="miniatura" src="Galletitas.jpg" width="450" height="300">
 <a href=" https://cookpad.com/es/recetas/98154-galletas-caseras-con-pedacitos-de-chocolate">ENLACE</a>
 <h2 class="Segon titol">Pasos</h2>
-
+<a href="#frase">Link</a>
 <h2>Ingredientes</h2>
 <ul> 
   <li> 2 Huevos</li>
@@ -35,7 +35,7 @@
 <LI> Cogemos una bandeja de horno y le echamos un poco de aceite para que las galletitas no se nos peguen, luego cogemos la masa de galletas y empezamos a hacer pequeñas bolitas que iremos colocando en nuestra bandeja.
 </LI>  
 <li> Después de haber llenado bandeja de la masa de galletas empezamos a colocar los trocitos de chocolate encima de esta y cuando hayamos terminado lo metemos al horno a unos 200 grados. </li>
-<li> Finalmente quitamos las galletas de la bandeja y las servimos en un plato para que se enfríen!
+<li id="frase"> Finalmente quitamos las galletas de la bandeja y las servimos en un plato para que se enfríen!
 </li>
 </ol>
 </body>
