Update Receta de Galletas de Chocolate.html

--- a/Receta de Galletas de Chocolate.html
+++ b/Receta de Galletas de Chocolate.html
@@ -10,7 +10,7 @@
 <img class="miniatura" src="Galletitas.jpg" width="450" height="300">
 <a href=" https://cookpad.com/es/recetas/98154-galletas-caseras-con-pedacitos-de-chocolate">ENLACE</a>
 <h2 class="Segon titol">Pasos</h2>
-<a href="#frase">Link</a>
+<a href="#frase">Ir Al Ultimo Paso</a>
 <h2>Ingredientes</h2>
 <ul> 
   <li> 2 Huevos</li>
