--- a/BROWNIE.html
+++ b/BROWNIE.html
@@ -26,7 +26,7 @@
     <li> 1 cuchara Extracto de Vainilla</li>
   </ul>
 </ul>
-<h2> Elaboracion paso a paso id="Elaboracion_paso_a_paso"</h2>
+<h2 id="Elaboracion_paso_a_paso"> Elaboracion paso a paso </h2>
 <ol>
 <li> Para hacer un Brownie, no necesitas ni siquiera utilizar robot o procesador de alimentos, tan solo el cuenco con las varillas manuales y luego la espátula para incorporar la harina</li>
 <li> Ya te he dicho que el chocolate es el protagonista….Pero qué chocolate debes de utilizar? Lo ideal es utilizar un chocolate de una concentración de cacao de al menos el 55% ….Pero si sois súper chocadictos en casa, también puedes combinar éste al 55% con uno al 70% en cantidades mitad y mitad por ejemplo! Fliparás con el intenso sabor!! 
